--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Some Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
+    <title></title>
 </head>
 <body>
-
-      {{ content }}
-    
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        {{ content }}
+      </div>
+    </div>
+  </div>
 </body>
 </html>
