--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@
     <title></title>
 </head>
 <body>
+  <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
+  </nav>
+  <br />
   <div class="container">
     <div class="row">
       <div class="col-md-8">
