--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,9 @@
 </head>
 <body>
   <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
+    <h3>
+      Tutorials and technical writing by Lukas Palmer
+    </h3>
   </nav>
   <br />
   <div class="container">
