--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
-    <h3>
+    <a class="navbar-brand" href="#">
       Tutorials and technical writing by Lukas Palmer
-    </h3>
+    </a>
   </nav>
   <br />
   <div class="container">
