--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,16 @@
     <title></title>
 </head>
 <body>
-  <nav class="navbar navbar-dark navbar-full navbar-fixed-top bg-inverse">
+  <nav class="navbar navbar-full navbar-fixed-tops">
     <a class="navbar-brand" href="#">
       Tutorials and technical writing by Lukas Palmer
     </a>
   </nav>
+
   <br />
+  <br />
+  <br />
+
   <div class="container">
     <div class="row">
       <div class="col-md-8">
