--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <title></title>
 </head>
-<body>
+<body style:"background-color:#606060">
   <nav class="navbar navbar-full navbar-fixed-tops">
     <a class="navbar-brand" href="#">
       Tutorials and technical writing by Lukas Palmer
     </a>
   </nav>
 
-  <br />
   <br />
   <br />
 
