--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
     <title></title>
 </head>
 <body style="background-color:#606060">
-  <nav class="navbar navbar-full navbar-light navbar-fixed-top">
+  <nav class="navbar navbar-full navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">
       Tutorials and technical writing by Lukas Palmer
     </a>
