--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,15 +6,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <title></title>
 </head>
-<body style="background-color:#606060">
-  <nav class="navbar navbar-full navbar-light navbar-fixed-top" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#">
-      Tutorials and technical writing by Lukas Palmer
-    </a>
+<body style="background-color:#303028">
+  <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand" href="#">Lukas Palmer</a>
   </nav>
-
-  <br />
-  <br />
 
   <div class="container">
     <div class="row">
