--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,10 +6,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <title></title>
 </head>
-<body style="background-color:#303028">
-  <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+<body style="background-color:#303030">
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3e3e6;">
     <a class="navbar-brand" href="#">Lukas Palmer</a>
   </nav>
+
+  <br />
+  <br />
+  <br />
 
   <div class="container">
     <div class="row">
