--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,12 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <title></title>
 </head>
-<body style="background-color:#303030">
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #e3e3e6;">
-    <a class="navbar-brand" href="#">Lukas Palmer</a>
+<body style="background-color: #282828;">
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f2f2f2;">
+    <a class="navbar-brand" href="#">Lukas Palmer / blog</a>
   </nav>
 
+  <br />
   <br />
   <br />
   <br />
