--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <title></title>
 </head>
-<body style="background-color: #282828;">
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f2f2f2;">
+<body style="background-color: #232323;">
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f5f5f5;">
     <a class="navbar-brand" href="#">Lukas Palmer / blog</a>
   </nav>
 
@@ -18,9 +18,11 @@
 
   <div class="container">
     <div class="row">
+      <div class="col-md-2"></div>
       <div class="col-md-8">
         {{ content }}
       </div>
+      <div class="col-md-2"></div>
     </div>
   </div>
 </body>
