--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: #232323;">
   <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f5f5f5;">
-    <a class="navbar-brand" href="lukasnpalmer.com">Lukas Palmer / blog</a>
+    <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / blog</a>
   </nav>
 
   <br />
@@ -19,7 +19,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-8" style="background-color: #f5f3f3;">
+      <div class="col-md-8" style="background-color: #f5f3f3; border-radius: 15px 15px 15px 15px;">
         {{ content }}
       </div>
       <div class="col-md-2"></div>
