--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,11 @@
       <div class="col-md-2"></div>
       <div class="col-md-8" style="background-color: #f5f3f3; border-radius: 15px 15px 15px 15px;">
         {{ content }}
+        <br />
+        <br />
+        <br />
+        <br />
+        More text
       </div>
       <div class="col-md-2"></div>
     </div>
