--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,21 +11,67 @@
     <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / blog</a>
   </nav>
 
-  <br />
-  <br />
-  <br />
-  <br />
-
   <div class="container">
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-8" style="background-color: #f5f3f3; border-radius: 15px 15px 15px 15px;">
+      <div class="col-md-8" style="background-color: #c3c3c7;">
+        <br />
+        <br />
+        <br />
         {{ content }}
         <br />
         <br />
         <br />
         <br />
-        More text
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        Some very tall content
+        <br />
+        <br />
+        <br />
+        <br />
       </div>
       <div class="col-md-2"></div>
     </div>
