--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,70 +11,20 @@
     <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / blog</a>
   </nav>
 
+  <br />
+  <br />
+  <br />
+
   <div class="container">
     <div class="row">
       <div class="col-md-2"></div>
-      <div class="col-md-8" style="background-color: #c3c3c7;">
-        <br />
-        <br />
-        <br />
+      <div class="col-md-8">
         {{ content }}
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        <br />
-        Some very tall content
-        <br />
-        <br />
-        <br />
-        <br />
       </div>
       <div class="col-md-2"></div>
     </div>
   </div>
+  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 </body>
 </html>
