--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,11 +20,15 @@
       <div class="col-md-2"></div>
       <div class="col-md-8">
         {{ content }}
+        <br />
+        {{ site.time }}
+        <br />
+        {{ site.url }}
       </div>
       <div class="col-md-2"></div>
     </div>
   </div>
-  
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous"></script>
 </body>
 </html>
