--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
     <title></title>
 </head>
 <body style="background-color: #232323;">
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f5f5f5;">
+  <nav class="navbar navbar-fixed-top" style="background-color: #f5f5f5;">
     <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / blog</a>
   </nav>
 
