--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
     <title></title>
 </head>
 <body style="background-color: #232323;">
@@ -29,6 +29,6 @@
     </div>
   </div>
 
-  <script src="{{ site.url }}/bootstrap/js/bootstrap.min.js" crossorigin="anonymous"></script>
+  <script src="{{ site.url }}/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
