--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
     <title></title>
 </head>
-<body style="background-color: #232323;">
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f5f5f5;">
+<body>
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f8f8f8;">
     <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / blog</a>
   </nav>
 
