--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@
     <title></title>
 </head>
 <body>
-  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: #f8f8f8;">
-    <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / blog</a>
+  <nav class="navbar navbar-light navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
+    <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / Blog</a>
   </nav>
 
   <br />
