--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
     <title></title>
 </head>
 <body>
-  <nav class="navbar navbar-light navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
+  <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / Blog</a>
   </nav>
 
