--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,6 +19,8 @@
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
+        <h2>{{ page.title }}</h2>
+        <hr />
         {{ content }}
         <br />
         {{ site.time }}
