--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
-    <title></title>
+    <title>{{ page.title }}</title>
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
