--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-    <a class="navbar-brand" href="http://lukasnpalmer.com">Lukas Palmer / Blog</a>
+    <a class="navbar-brand" href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer / Blog</a>
   </nav>
 
   <br />
