--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ site.url }}/tango.css">
     <title>{{ page.title }}</title>
 </head>
 <body>
