--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=38c6eec89b9a86e290f8d76be0cc7687)
- * Config saved to config.json and https://gist.github.com/38c6eec89b9a86e290f8d76be0cc7687
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=037917ee93f8c35dcd082d95eb4c25bd)
+ * Config saved to config.json and https://gist.github.com/037917ee93f8c35dcd082d95eb4c25bd
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -1570,8 +1570,8 @@ pre {
   line-height: 1.42857143;
   word-break: break-all;
   word-wrap: break-word;
-  color: #333333;
-  background-color: #f5f5f5;
+  color: #ffffff;
+  background-color: #333333;
   border: 1px solid #cccccc;
   border-radius: 4px;
 }
