--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=c77037506a9cebc328761e9255fc14c5)
- * Config saved to config.json and https://gist.github.com/c77037506a9cebc328761e9255fc14c5
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=0518ab8603dd5511785c12ccacd29d4f)
+ * Config saved to config.json and https://gist.github.com/0518ab8603dd5511785c12ccacd29d4f
  */
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
@@ -1542,7 +1542,7 @@ samp {
 code {
   padding: 2px 4px;
   font-size: 90%;
-  color: #c7355e;
+  color: #f92672;
   background-color: #454545;
   border-radius: 4px;
 }
