--- a/darkly.css
+++ b/darkly.css
@@ -4,17 +4,22 @@
   http://sourcey.com
 */
 
-.highlight {
+/*.highlight {
   white-space: pre;
   overflow: auto;
-  word-wrap: normal; /* horizontal scrolling */
+  word-wrap: normal;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
   padding: 20px;
   background: #343642;
   color: #C1C2C3;
+}*/
+
+.highlight {
+  color: #C1C2C3;
 }
+
 .highlight .hll { background-color: #ffc; }
 .highlight .gd { color: #2e3436; background-color: #0e1416; }
 .highlight .gr { color: #eeeeec; background-color: #c00; }
