--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,9 @@
         <h2>{{ page.title }}</h2>
         <hr />
         {{ content }}
+        <br />
+        <br />
+        {{ site.time }}
       </div>
       <div class="col-md-2"></div>
     </div>
