--- a/darkly.css
+++ b/darkly.css
@@ -18,21 +18,10 @@
 
 .highlight {
   color: #C1C2C3;
-  white-space: pre;
-  overflow: auto;
-  word-wrap: normal;
 }
 
-pre {
+pre code{
   white-space: pre;
-  overflow: auto;
-  word-wrap: normal;
-}
-
-code {
-  white-space: pre;
-  overflow: auto;
-  word-wrap: normal;
 }
 
 .highlight .hll { background-color: #ffc; }
