--- a/darkly.css
+++ b/darkly.css
@@ -19,9 +19,18 @@
 .highlight {
   color: #C1C2C3;
 }
+// -- selector prefixed to the wrapper div for collision prevention
 
-pre code{
-  white-space: pre;
+.highlight pre code * {
+  white-space: nowrap;    // this sets all children inside to nowrap
+}
+
+.highlight pre {
+  overflow-x: auto;       // this sets the scrolling in x
+}
+
+.highlight pre code {
+  white-space: pre;       // forces <code> to respect <pre> formatting
 }
 
 .highlight .hll { background-color: #ffc; }
