--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,8 +24,7 @@
         <hr />
         {{ content }}
         <br />
-        <br />
-        {{ site.time }}
+        Generated {{ site.time }}
         <br />
       </div>
       <div class="col-md-2"></div>
