--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-    <a class="navbar-brand" href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer / Blog</a>
+    <a class="navbar-brand" href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
+    /
+    <a class="navbar-brand" href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
   </nav>
 
   <br />
