--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,9 +9,11 @@
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-    <a class="navbar-brand" href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
-    /
-    <a class="navbar-brand" href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
+    <span class="navbar-brand">
+      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
+      /
+      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
+    </span>
   </nav>
 
   <br />
