--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <span class="navbar-brand">
       <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
-      /
+      <a href="#">/</a>
       <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
     </span>
   </nav>
