--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
-    <span class="navbar-brand">
-      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
-      <a href="http://lnpalmer.github.io" style="color: #222;">/ Blog</a>
+    <span class="navbar-brand" style="color: #222;">
+      <a href="http://lukasnpalmer.com">Lukas Palmer</a>
+      /
+      <a href="http://lnpalmer.github.io">Blog</a>
     </span>
   </nav>
 
