--- a/darkly.css
+++ b/darkly.css
@@ -16,8 +16,8 @@
   color: #C1C2C3;
 }*/
 
-.highlight .code pre { border: none; white-space: pre; overflow-x: auto; word-wrap: normal; }
-.highlight code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
+/*.highlight .code pre { border: none; white-space: pre; overflow-x: auto; word-wrap: normal; }
+.highlight code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }*/
 
 .highlight .hll { background-color: #ffc; }
 .highlight .gd { color: #2e3436; background-color: #0e1416; }
