--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,8 +28,7 @@
         <hr />
         {{ content }}
         <br />
-        <span class="text-muted">Generated {{ site.time }}</span>
-        <br />
+        <small class="text-muted">Generated {{ site.time }}</small>
       </div>
       <div class="col-md-2"></div>
     </div>
