--- a/monokai.css
+++ b/monokai.css
@@ -1,3 +1,7 @@
+/* horizontal code scrolling */
+.highlight .code pre { border: none; white-space: pre; overflow-x: auto; word-wrap: normal; }
+.highlight code { display: block; white-space: pre; overflow-x: auto; word-wrap: normal; }
+
 .highlight .hll { background-color: #49483e }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
