--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,13 @@
     ga('create', 'UA-79834876-2', 'auto');
     ga('send', 'pageview');
   </script>
-  
+
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@lukaspalmerdev" />
+  <meta name="twitter:title" content="{{ page.title }}" />
+  <meta name="twitter:description" content=" {{ page.excerpt }} " />
+  <!--<meta name="twitter:image" content="{{ site.url }}/assets/Neuricon.png" />-->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="{{ site.url }}/bootstrap/css/bootstrap.min.css">
