--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
   <meta name="twitter:site" content="@lukaspalmerdev" />
   <meta name="twitter:title" content="{{ page.title }}" />
   <meta name="twitter:description" content=" {{ page.excerpt }} " />
-  <!--<meta name="twitter:image" content="{{ site.url }}/assets/Neuricon.png" />-->
+  <meta name="twitter:image" content="{{ site.url }}/assets/Neuricon.png" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
