--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,9 +25,9 @@
 <body>
   <nav class="navbar navbar-fixed-top navbar-full" style="background-color: #f8f8f8;">
     <span class="navbar-brand" style="color: #222;">
-      <a href="http://lukasnpalmer.com" style="color: #222;">Lukas Palmer</a>
+      <a href="http://lukasnpalmer.com" style="color: #222;">lnpalmer</a>
        /
-      <a href="http://lnpalmer.github.io" style="color: #222;">Blog</a>
+      <a href="http://lnpalmer.github.io" style="color: #222;">blog</a>
     </span>
   </nav>
 
